- Store a weak reference to the Cache in the CacheCleaner thread, and   kill the thread when the Cache is finalized.   (suggested by Joseph Shraibman <jks@iname.com>
git-svn-id: http://svn.code.sf.net/p/dnsjava/code/trunk@1108 c76caeb1-94fd-44dd-870f-0c9d92034fc1